--- a/pages/home.html
+++ b/pages/home.html
@@ -1,1 +1,30 @@
+<h2>Home</h2>
+<p>Welcome to the Disaster Preparedness Portal — your trusted resource for staying safe before, during, and after
+    disasters. Whether you're at home, at work, or on the road, being prepared can make all the difference.</p>
 
+<h3>Why Disaster Preparedness Matters</h3>
+<p>Disasters can strike without warning — from natural hazards like earthquakes and floods to man-made crises. Being
+    prepared helps reduce panic, saves lives, and ensures faster recovery.</p>
+
+<blockquote><strong>Goal:</strong> “Ensure readiness and minimize chaos during emergencies.”</blockquote>
+
+<h3>What You Can Do Here</h3>
+<ul>
+    <li>🔍 <strong>Know the Risks</strong> – Learn about the hazards specific to your area.</li>
+    <li>📦 <strong>Prepare Now</strong> – Build an emergency kit, make a plan, and stay informed.</li>
+    <li>🚨 <strong>During a Disaster</strong> – Know how to act quickly and safely in crisis situations.</li>
+    <li>🛠️ <strong>After the Disaster</strong> – Learn what to do after the danger has passed.</li>
+    <li>📰 <strong>News and Updates</strong> – Get real-time alerts and official guidance.</li>
+    <li>📘 <strong>About Us</strong> – Meet the team and learn about our mission.</li>
+</ul>
+
+<h3>Emergency Contacts</h3>
+<ul>
+    <li><strong>Emergency Services:</strong> 911</li>
+    <li><strong>FEMA Helpline:</strong> 1-800-621-3362</li>
+    <li><strong>Red Cross:</strong> 1-800-733-2767</li>
+</ul>
+
+<h3>Quick Start</h3>
+<p>Click <strong>“Know the Risks”</strong> to identify the most likely threats in your region and begin your
+    preparedness journey.</p>
